// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Form Select Default 1`] = `
<div
  class="fd-form-item"
>
  
        
  <label
    class="fd-form-label"
    for="select-1"
  >
    Default Select:
  </label>
  
        
  <select
    class="fd-form-select"
    id="select-1"
    name=""
  >
    
            
    <option
      value="1"
    >
      Duis malesuada odio volutpat elementum
    </option>
    
            
    <option
      value="2"
    >
      Suspendisse ante ligula
    </option>
    
            
    <option
      value="3"
    >
      Sed bibendum sapien at posuere interdum
    </option>
    
        
  </select>
  
    
</div>
`;

exports[`Storyshots Components/Forms/Form Select Disabled 1`] = `
<div
  class="fd-form-item"
>
  
        
  <label
    class="fd-form-label"
    for="select-2"
  >
    Disabled Select:
  </label>
  
        
  <select
    class="fd-form-select"
    disabled=""
    id="select-2"
    name=""
  >
    
            
    <option
      value="1"
    >
      Duis malesuada odio volutpat elementum
    </option>
    
            
    <option
      value="2"
    >
      Suspendisse ante ligula
    </option>
    
            
    <option
      value="3"
    >
      Sed bibendum sapien at posuere interdum
    </option>
    
        
  </select>
  
    
</div>
`;
